--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -83,7 +83,7 @@
                     <label for="body" class="block text-sm font-medium text-gray-700">Review</label>
                     <textarea
                         class="mt-1 px-2 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-                        name="body" id="body" required></textarea>
+                        name="content" id="body" required></textarea>
                 </div>
 
                 <button class="w-full bg-blue-500 text-white py-2 px-4 rounded-md shadow hover:bg-blue-600">Submit
@@ -94,12 +94,26 @@
                 <h3 class="text-xl font-semibold">All Reviews</h3>
                 <% for (let review of listing.reviews) { %>
                     <div class="p-4 bg-gray-100 rounded-md shadow">
-                        <h5 class="text-sm font-bold text-gray-700">By: <%= review.author.username %>
+                        <div class="flex gap-2 w-full justify-between">
+                            <div>
+                                <% for (let i=1; i<=5; i++) { %>
+                                    <span class="<%= review.rating>=i? 'text-yellow-500' : 'text-gray-400' %>">
+                                        <i class="fas fa-star"></i>
+                                    </span>
+                                    <% } %>
+                            </div>
+                            <p class="text-right text-sm font-semibold text-gray-700">
+                                <%= review.createdAt.toLocaleDateString('en-IN' , { hour: '2-digit' , minute: '2-digit'
+                                    , second: '2-digit' , hour12: false , day: '2-digit' , month: '2-digit' ,
+                                    year: 'numeric' }) %>
+                            </p>
+                        </div>
+                        <h5 class="text-sm font-bold text-gray-700">By: <%= review.owner.username %>
                         </h5>
                         <p class="text-sm">
-                            <%= review.body %>
+                            <%= review.content %>
                         </p>
-                        <% if (currUser && (currUser._id===review.author._id || currUser.username==="jaimin345" )) { %>
+                        <% if (currUser && (currUser._id===review.owner._id || currUser.username==="jaimin345" )) { %>
                             <form action="/listings/<%= listing.id %>/reviews/<%= review._id %>?_method=DELETE"
                                 method="post">
                                 <button
