--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="mt-5 bg-gray-100 py-8">
+<footer class=" w-full mt-5 bg-gray-100 py-8 absolute bottom-0 ">
     <div class="text-center">
         <div class="flex justify-center space-x-6 mb-4">
             <a href="https://github.com/JaiminPatel345/wanderlust" class="text-gray-500 hover:text-pink-500"><i
