--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -25,10 +25,10 @@
 
 </head>
 
-<body class="flex flex-col min-h-screen font-[Plus Jakarta Sans]">
+<body class="flex relative flex-col min-h-screen font-[Plus Jakarta Sans]">
     <%- include("../includes/navbar.ejs") %>
 
-        <div class="container mx-auto">
+        <div class="container mx-auto mb-48">
             <%- include("../includes/flash.ejs") %>
                 <%- body %>
         </div>
